c3prj1_deck/grade.txt
Grading at Sun Mar  7 21:51:54 UTC 2021
Compiling deck.c
deck.c: In function ‘build_remaining_deck’:
deck.c:42:30: error: request for member ‘cards’ in something not a structure or union
       add_card_to(build,hands->cards[j]);
                              ^
Could not compile your deck.c!

Overall Grade: FAILED
